# WanderlogPro

./: .gitignore  README.md  plan.md  preview_test.html  pyproject.toml
.github/: copilot-instructions.md
apk-template/: build.gradle  gradle.properties  gradlew  gradlew.bat  settings.gradle
apk-template/src/main/: AndroidManifest.xml
apk-template/src/main/java/com/wanderlogpro/viewer/: WebViewActivity.java
apk-template/src/main/res/drawable/: ic_launcher.xml
apk-template/src/main/res/values/: strings.xml
src/: cli.py  utils.py
src/calendar_export/: README.md  __init__.py  dry-run-demo.html  gcal_export.py  models.py  preview.py  scraper.py
src/map_export/: README.md  kml_export.py  scraper.py
src/offline_mode/: __init__.py  apk_builder.py  builder.py  generator.py  models.py
src/wanderlogpro/: cli.py  utils.py
src/wanderlogpro/calendar_export/: README.md  gcal_export.py  models.py  preview.py
src/wanderlogpro/map_export/: ICON_MAPPING.md  README.md  __init__.py  icon_map.py  models.py  scraper.py
tests/: test_cli_resolve_url.py
tests/calendar_export/: test_gcal_export.py  test_models.py  test_preview.py  test_scraper.py
tests/map_export/: test_icon_map.py  test_kml_export.py  test_models.py  test_scraper.py
tests/offline_mode/: test_apk_builder.py  test_guide.py
