[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wanderlogpro"
version = "0.1.0"
description = "Export Wanderlog trips to Google My Maps with styled KML layers"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "requests>=2.31",

    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.2",
    "timezonefinder>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[project.scripts]
wanderlogpro = "wanderlogpro.cli:main"

[tool.setuptools.package-dir]
wanderlogpro = "src"
"wanderlogpro.calendar_export" = "src/calendar_export"
"wanderlogpro.map_export" = "src/map_export"
"wanderlogpro.offline_mode" = "src/offline_mode"

[tool.setuptools]
packages = ["wanderlogpro", "wanderlogpro.calendar_export", "wanderlogpro.map_export", "wanderlogpro.offline_mode"]
